2007-04-13  Paul Emsley  <emsley@localhost>

	* src/pick.cc: Added Segid info to picked atom output info
	[Christie Durnham]

2007-04-07  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* Release 0.3.1 

	* enable NCS ghosts.  Add fractional matrix for LSQing. 

	* Release 0.3

2007-03-31  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* src/graphics-info.cc: (destroy_edit_backbone_rama_plot): set
	edit_phi_psi_plot to null so that it is not left dangling when we
	do edit phi/psi the the N-terminal residue, where there is no
	Ramachandran plot made.  Fixes Richard Baxter bug.

	(update_molecule_to): don't call molecule_class_info_t's
	update_molecule_to if there are no atoms in the guide point
	vector.  This stops the creation of a molecule with no atoms in
	it, which causes problems because it seems to be closed.  Also
	this means that the model is not modified without creating a new
	atom selection.  Fixes Richard Baxter bug.

2007-03-19  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* src/cc-interface.hh: Add USE_GUILE protection to
	dictionaries_read().

2007-03-06  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* src/c-interface-build.cc: (replace_fragment): function added.

2007-03-05  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* src/c-interface.h: (zoom_factor) function added.

2007-02-13  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* mapview.glade: Fix typo in "No Restraints" window [Steven
	Sheriff].

2007-02-10  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* configure.in: Changed to version 0.2.1-pre-2 as I manually apply
	diffs from Paris.

2007-02-08  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* src/callbacks.c: Many functions: change return types from gchar*
	to const char * [typically from entries] to compile cleanly with
	GTK2.

	* src/c-interface-info.cc:
	(generic_string_vector_to_list_internal): needs USE_GUILE
	protection.

	* macros/guile-gtk.m4 (AM_PATH_GUILE_GTK): Use coot_gtk2 to set
	the version of libguilegtk-x.y.la for GUILE_GTK_LIBS.
